--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,9 @@ jobs:
   build:
   #定义名为 build 的作业。 子键将定义作业的属性 
     runs-on: ubuntu-latest 
+    strategy:
+    matrix:
+    python-version: ['2.x', '3.x']
     steps:
       - uses: actions/checkout@v2
     
